Support both java8 and java9.
Change-Id: Icc47e634a01b73acec827a354098e225915c5495