@@ -81,7 +81,7 @@ public final class OptionsParser {
 
   private String ruleKind;
   private String targetLabel;
-  
+
   private boolean testOnly;
 
   /**
@@ -202,6 +202,15 @@ public final class OptionsParser {
           break;
         case "--testonly":
           testOnly = true;
+          break;
+        // Java 9 new options that begins with --.
+        // Only the ones that are useful for modifying JDK internal modules are listed here.
+        // They are needed for compiling code that uses JDK internals.
+        case "--patch-module":
+        case "--add-exports":
+        case "--add-modules":
+          javacOpts.add(arg);
+          collectFlagArguments(javacOpts, argQueue, "--");
           break;
         default:
           throw new InvalidCommandLineException("unknown option : '" + arg + "'");
